# Copyright (c) 2019 The Hns Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//hns/android/features/tab_ui/hns_tab_management_java_sources.gni")
import("//hns/android/feed/hns_feed_java_sources.gni")
import(
    "//hns/android/java/org/chromium/chrome/browser/vpn/billing/sources.gni")
import("//hns/browser/hns_ads/android/java_sources.gni")
import("//hns/browser/flags/hns_flags_java_sources.gni")
import("//hns/browser/incognito/android/java_sources.gni")
import("//hns/browser/preferences/hns_preferences_java_sources.gni")
import("//hns/browser/share/android/java_sources.gni")
import("//hns/components/embedder_support/android/java_sources.gni")
import("//hns/components/permissions/android/java_sources.gni")
import("//hns/components/safetynet/java_sources.gni")
import("//components/feed/features.gni")

hns_java_sources = [
  "../../hns/android/java/org/chromium/chrome/browser/HnsAdFreeCalloutDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsAppHooks.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsApplicationImplBase.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsBadge.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsFeatureUtil.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsIntentHandler.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsLaunchIntentDispatcher.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsLocalState.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsRelaunchUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsRewardsBalance.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsRewardsExternalWallet.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsRewardsHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsRewardsNativeWorker.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsRewardsObserver.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsRewardsOnboardingPagerAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsRewardsUserWalletActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsRewardsVerifyWalletActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsSyncInformers.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsSyncWorker.java",
  "../../hns/android/java/org/chromium/chrome/browser/HnsWalletProvider.java",
  "../../hns/android/java/org/chromium/chrome/browser/CrossPromotionalModalDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/DormantUsersEngagementDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/InternetConnection.java",
  "../../hns/android/java/org/chromium/chrome/browser/QRCodeShareDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/HnsActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/appmenu/AppMenuIconRowFooter.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/appmenu/HnsAppMenuPropertiesDelegateImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/bookmarks/HnsBookmarkActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/CryptoModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/CryptoSharedActions.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/CryptoSharedData.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/DappsModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/KeyringModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/MarketModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/NetworkModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/NetworkSelectorModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/PortfolioModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/TransactionsModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/UserAssetModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/domain/WalletModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/helpers/Api33AndPlusBackPressHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/helpers/ImageLoader.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/shimmer/Shimmer.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/shimmer/ShimmerDrawable.java",
  "../../hns/android/java/org/chromium/chrome/browser/app/shimmer/ShimmerFrameLayout.java",
  "../../hns/android/java/org/chromium/chrome/browser/appmenu/HnsTabbedAppMenuPropertiesDelegate.java",
  "../../hns/android/java/org/chromium/chrome/browser/autofill/HnsAutofillPopupBridge.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkBridge.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkDelegate.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkImportExportDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkManagerCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkManagerMediator.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkPage.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkToolbar.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkToolbarCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/bookmarks/HnsBookmarkUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_news/HnsNewsAdapterFeedCard.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_news/HnsNewsBottomSheetDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_news/HnsNewsConnectionErrorHandler.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_news/HnsNewsControllerFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_news/HnsNewsUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_news/CardBuilderFeedCard.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_news/LinearLayoutManagerWrapper.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_news/models/FeedItemCard.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_news/models/FeedItemsCard.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_stats/HnsStatsBottomSheetDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/hns_stats/HnsStatsUtil.java",
  "../../hns/android/java/org/chromium/chrome/browser/component_updater/HnsComponentUpdater.java",
  "../../hns/android/java/org/chromium/chrome/browser/contextmenu/HnsChromeContextMenuPopulator.java",
  "../../hns/android/java/org/chromium/chrome/browser/crash/HnsPureJavaExceptionReporter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/AssetRatioServiceFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/BlockchainRegistryFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/HnsWalletProviderDelegateImplHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/HnsWalletServiceFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/JsonRpcServiceFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/KeyringServiceFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/SwapServiceFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/TxServiceFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountDetailActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountDetailsWithQrActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountPrivateKeyActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountSelectorActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AddAccountActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AddAssetActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AdvanceTxSettingActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AssetDetailActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/HnsWalletActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/HnsWalletBaseActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/HnsWalletDAppsActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/NetworkSelectorActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/activities/NftDetailActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/ApproveTxFragmentPageAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/CreateAccountAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/CryptoFragmentPageAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/CryptoWalletOnboardingPagerAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/FragmentNavigationItemAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/MarketCoinAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/NetworkSelectorAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/NetworkSpinnerAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/PortfolioFragmentStateAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/RecoveryPhraseAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/SignMessagePagerAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/TwoLineItemRecyclerViewAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/WalletCoinAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/WalletNftAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/controller/DAppsWalletController.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/AccountsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/ApproveTxBottomSheetDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/AssetsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/CreateAccountBottomSheetFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/EditVisibleAssetsBottomSheetDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/MarketFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/NftGridFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/PortfolioFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/SolanaTxDetailsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/SwapBottomSheetDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TransactionDetailsSheetFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TransactionsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TwoLineItemFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxDetailsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/WalletBottomSheetDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/AddSwitchChainNetworkFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/AddTokenFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/BaseDAppsBottomSheetDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/BaseDAppsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/ConnectAccountFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/DAppsMessageFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/EncryptionKeyFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/SignMessageFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/SignTransactionFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/BackupWalletFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/CryptoOnboardingFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/DownloadComponentProgressFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/RecoveryPhraseFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/RestoreWalletFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/SecurePasswordFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/SetupWalletFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/UnlockWalletFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/VerifyRecoveryPhraseFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/listeners/OnNextPage.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/listeners/OnWalletListItemClick.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/listeners/TransactionConfirmationListener.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/modal/HnsWalletPanel.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/modal/DAppsDialog.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/model/CryptoAccountTypeInfo.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/model/OnboardingViewModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/model/TxNonSwipeableViewPager.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/model/WalletAccountCreationRequest.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/model/WalletListItemModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/observers/ApprovedTxObserver.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/observers/HnsWalletServiceObserverImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/observers/KeyringServiceObserverImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/observers/TxServiceObserverImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/permission/HnsDappPermissionPromptDialog.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/permission/HnsPermissionAccountsListAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/presenters/Amount.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/presenters/NetworkInfoPresenter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/presenters/SolanaInstructionPresenter.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/AccountsPermissionsHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/AddressUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/AndroidUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/AssetUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/AssetsPricesHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/AsyncUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/BalanceHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/Blockies.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/ItemOffsetDecoration.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/JavaUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/KeystoreHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/NavigationItem.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/NetworkResponsesCollector.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/NetworkUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/ParsedTransaction.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/ParsedTransactionFees.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/PendingTxHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/PortfolioHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/SmoothLineChartEquallySpaced.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/SolanaTransactionsGasHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/TokenUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/TransactionUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/Utils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/Validations.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/WalletConstants.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/WalletDataFilesInstaller.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/WalletDataFilesInstallerUtil.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/WalletNativeUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/util/WalletUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/crypto_wallet/web_ui/WebUiActivityType.java",
  "../../hns/android/java/org/chromium/chrome/browser/custom_layout/AutoFitVerticalGridLayoutManager.java",
  "../../hns/android/java/org/chromium/chrome/browser/custom_layout/HeightWrappingViewPager.java",
  "../../hns/android/java/org/chromium/chrome/browser/custom_layout/LockableNestedScrollView.java",
  "../../hns/android/java/org/chromium/chrome/browser/custom_layout/NonSwipeableViewPager.java",
  "../../hns/android/java/org/chromium/chrome/browser/custom_layout/VerticalViewPager.java",
  "../../hns/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/ArrowColorDrawable.java",
  "../../hns/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltip.java",
  "../../hns/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltipUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/decentralized_dns/settings/ENSSettingsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupDDnsResolveMethodPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupEnsOffchainResolveMethodPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/decentralized_dns/settings/SnsSettingsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/decentralized_dns/settings/UnstoppableDomainsSettingsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/document/HnsLauncherActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/dom_distiller/HnsReaderModeManager.java",
  "../../hns/android/java/org/chromium/chrome/browser/download/settings/HnsDownloadSettings.java",
  "../../hns/android/java/org/chromium/chrome/browser/externalnav/HnsExternalNavigationHandler.java",
  "../../hns/android/java/org/chromium/chrome/browser/feedback/HnsHelpAndFeedbackLauncherImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/firstrun/HnsFirstRunFlowSequencer.java",
  "../../hns/android/java/org/chromium/chrome/browser/firstrun/HnsFreIntentCreator.java",
  "../../hns/android/java/org/chromium/chrome/browser/firstrun/WelcomeOnboardingActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/homepage/HnsHomepageManager.java",
  "../../hns/android/java/org/chromium/chrome/browser/homepage/settings/HnsHomepageSettings.java",
  "../../hns/android/java/org/chromium/chrome/browser/infobar/HnsInfoBarIdentifier.java",
  "../../hns/android/java/org/chromium/chrome/browser/infobar/HnsTranslateCompactInfoBarBase.java",
  "../../hns/android/java/org/chromium/chrome/browser/informers/HnsAndroidSyncDisabledInformer.java",
  "../../hns/android/java/org/chromium/chrome/browser/informers/HnsSyncAccountDeletedInformer.java",
  "../../hns/android/java/org/chromium/chrome/browser/language/settings/HnsLanguageSettings.java",
  "../../hns/android/java/org/chromium/chrome/browser/local_database/HnsStatsTable.java",
  "../../hns/android/java/org/chromium/chrome/browser/local_database/DatabaseHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/local_database/DisplayAdsTable.java",
  "../../hns/android/java/org/chromium/chrome/browser/local_database/SavedBandwidthTable.java",
  "../../hns/android/java/org/chromium/chrome/browser/local_database/TopSiteTable.java",
  "../../hns/android/java/org/chromium/chrome/browser/misc_metrics/PrivacyHubMetricsConnectionErrorHandler.java",
  "../../hns/android/java/org/chromium/chrome/browser/misc_metrics/PrivacyHubMetricsFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/night_mode/settings/HnsRadioButtonGroupThemePreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/night_mode/settings/HnsThemePreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/HnsNotificationPlatformBridge.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/HnsNotificationSettingsBridge.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/HnsNotificationWarningDialog.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/HnsOnboardingNotification.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/HnsPermissionUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/RewardsYouAreNotEarningDialog.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/permissions/HnsNotificationPermissionRationaleDialog.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/permissions/HnsNotificationPermissionRationaleDialogController.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotification.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationPublisher.java",
  "../../hns/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationUtil.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp/HnsNewTabPage.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp/HnsNewTabPageLayout.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp/HnsNtpAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp/IncognitoNewTabPageView.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp/OnHnsNtpListener.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/NTPBackgroundImagesBridge.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/RewardsBottomSheetDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/model/BackgroundImage.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/model/ImageCredit.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/model/NTPImage.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredLogo.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredTab.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/model/TopSite.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/model/Wallpaper.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/util/FetchWallpaperWorkerTask.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/util/NTPUtil.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/util/NewTabPageListener.java",
  "../../hns/android/java/org/chromium/chrome/browser/ntp_background_images/util/SponsoredImageUtil.java",
  "../../hns/android/java/org/chromium/chrome/browser/omnibox/HnsLocationBarCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/omnibox/HnsLocationBarLayout.java",
  "../../hns/android/java/org/chromium/chrome/browser/omnibox/HnsLocationBarMediator.java",
  "../../hns/android/java/org/chromium/chrome/browser/omnibox/HnsLocationBarQRDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/HnsRewardsOnboardingFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/OnViewPagerAction.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/OnboardingActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/OnboardingPrefManager.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/OnboardingViewPagerAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/SearchActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/SearchEngineEnum.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/SearchEngineOnboardingFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/TroubleshootingOnboardingFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightItem.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightView.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2Fragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2PagerAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/paint_preview/HnsStartupPaintPreviewHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/partnercustomizations/CloseHnsManager.java",
  "../../hns/android/java/org/chromium/chrome/browser/password_manager/settings/HnsPasswordSettingsBase.java",
  "../../hns/android/java/org/chromium/chrome/browser/playlist/PlaylistHostActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/playlist/PlaylistServiceFactoryAndroid.java",
  "../../hns/android/java/org/chromium/chrome/browser/playlist/PlaylistServiceObserverImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/playlist/PlaylistWarningDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/playlist/settings/HnsPlaylistPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/playlist/settings/HnsPlaylistResetPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/playlist/settings/HnsPlaylistSaveMediaFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/playlist/settings/RadioButtonGroupPlaylistAutoSavePreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/preferences/HnsPrefServiceBridge.java",
  "../../hns/android/java/org/chromium/chrome/browser/preferences/website/HnsShieldsContentSettings.java",
  "../../hns/android/java/org/chromium/chrome/browser/preferences/website/HnsShieldsContentSettingsObserver.java",
  "../../hns/android/java/org/chromium/chrome/browser/privacy/settings/HnsPrivacySettings.java",
  "../../hns/android/java/org/chromium/chrome/browser/privacy/settings/HnsPrivacySettingsIPFSUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/qrreader/BarcodeTracker.java",
  "../../hns/android/java/org/chromium/chrome/browser/qrreader/BarcodeTrackerFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/qrreader/CameraSource.java",
  "../../hns/android/java/org/chromium/chrome/browser/qrreader/CameraSourcePreview.java",
  "../../hns/android/java/org/chromium/chrome/browser/query_tiles/HnsQueryTileSection.java",
  "../../hns/android/java/org/chromium/chrome/browser/rate/HnsAskPlayStoreRatingDialog.java",
  "../../hns/android/java/org/chromium/chrome/browser/rate/HnsRateDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/rate/HnsRateThanksFeedbackDialog.java",
  "../../hns/android/java/org/chromium/chrome/browser/rate/RateFeedbackUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/rate/RateUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/HnsRewardsBannerInfo.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/HnsRewardsPanel.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/adaptive_captcha/AdaptiveCaptchaHelper.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/onboarding/CountrySelectionSpinnerAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/onboarding/RewardsOnboarding.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/tipping/MonthlyContributionToolTip.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/tipping/RewardsTippingBannerActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/tipping/RewardsTippingPanelFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/tipping/RewardsTippingSuccessContributionFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/rewards/tipping/TippingVerifiedCreatorToolTip.java",
  "../../hns/android/java/org/chromium/chrome/browser/safe_browsing/settings/HnsStandardProtectionSettingsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/safe_browsing/settings/NoGooglePlayServicesDialog.java",
  "../../hns/android/java/org/chromium/chrome/browser/searchwidget/SearchWidgetProviderActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/set_default_browser/HnsSetDefaultBrowserUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/set_default_browser/OnHnsSetDefaultBrowserListener.java",
  "../../hns/android/java/org/chromium/chrome/browser/set_default_browser/SetDefaultBrowserBottomSheetFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/AppearancePreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/BackgroundImagesPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsDialogPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsLicensePreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsLicensePreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsMainPreferencesBase.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsNewsPreferencesDataListener.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsNewsPreferencesDetails.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsNewsPreferencesListener.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsNewsPreferencesSearchType.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsNewsPreferencesType.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsNewsPreferencesTypeAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsNewsPreferencesV2.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsNewsSettingsDividerItemDecoration.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsPreferenceDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsPreferenceFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsRewardsResetPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsRewardsResetPreferenceDialog.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsSearchEngineUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsSearchEnginesPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsSettingsActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsSettingsLauncherImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsStatsPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsSyncScreensPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsVpnPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsVpnServerSelectionPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsWalletAddNetworksFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsWalletAutoLockPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsWalletNetworksPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsWalletNetworksPreferenceFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsWalletPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsWalletResetPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsWalletResetTxHistoryAndNoncePreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsWebrtcPolicyPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/HnsWebrtcPolicyPreferencesFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/NetworkListBaseAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/SearchEngineTabModelSelectorObserver.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/SearchPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/VpnCalloutPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/developer/HnsQAPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/developer/HnsRewardsDebugPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/settings/themes/HnsRadioButtonGroupCustomHomepageThemePreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/share/HnsShareDelegateImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/shields/AddCustomFilterListsFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/shields/HnsContentFilteringListener.java",
  "../../hns/android/java/org/chromium/chrome/browser/shields/HnsShieldsHandler.java",
  "../../hns/android/java/org/chromium/chrome/browser/shields/HnsShieldsMenuObserver.java",
  "../../hns/android/java/org/chromium/chrome/browser/shields/HnsShieldsUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/shields/ContentFilteringAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/shields/ContentFilteringFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/shields/FilterListServiceFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/shields/UrlSanitizerServiceFactory.java",
  "../../hns/android/java/org/chromium/chrome/browser/signin/HnsSigninManager.java",
  "../../hns/android/java/org/chromium/chrome/browser/site_settings/HnsSiteSettingsDelegate.java",
  "../../hns/android/java/org/chromium/chrome/browser/site_settings/HnsWalletEthereumConnectedSites.java",
  "../../hns/android/java/org/chromium/chrome/browser/site_settings/HnsWalletEthereumConnectedSitesListAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/site_settings/HnsWalletEthereumConnectedSitesPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/site_settings/HnsWalletSolanaConnectedSites.java",
  "../../hns/android/java/org/chromium/chrome/browser/site_settings/HnsWalletSolanaConnectedSitesPreference.java",
  "../../hns/android/java/org/chromium/chrome/browser/site_settings/PlayYTVideoInBrowserPreferences.java",
  "../../hns/android/java/org/chromium/chrome/browser/speedreader/HnsSpeedReaderManager.java",
  "../../hns/android/java/org/chromium/chrome/browser/speedreader/HnsSpeedReaderUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/suggestions/tile/HnsMostVisitedTilesMediator.java",
  "../../hns/android/java/org/chromium/chrome/browser/suggestions/tile/HnsTileView.java",
  "../../hns/android/java/org/chromium/chrome/browser/sync/HnsSyncDevices.java",
  "../../hns/android/java/org/chromium/chrome/browser/sync/settings/HnsManageSyncSettings.java",
  "../../hns/android/java/org/chromium/chrome/browser/tab/HnsTabHelpers.java",
  "../../hns/android/java/org/chromium/chrome/browser/tabbed_mode/HnsTabbedRootUiCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/tabmodel/HnsTabCreator.java",
  "../../hns/android/java/org/chromium/chrome/browser/tasks/HnsReturnToChromeUtil.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/HnsHomeButton.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/HnsIncognitoToggleTabLayout.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/HnsToolbarManager.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BookmarksButton.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarConfiguration.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarNewTabButton.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarVariationManager.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/HnsBottomControlsCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/HnsScrollingBottomViewResourceFrameLayout.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarLinearLayout.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarMediator.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarViewBinder.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/SearchAccelerator.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarMediator.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarViewBinder.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/menu_button/HnsMenuButtonCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/top/HnsTabSwitcherModeTTCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/top/HnsTabSwitcherModeTopToolbar.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/top/HnsToolbarLayoutImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/toolbar/top/HnsTopToolbarCoordinator.java",
  "../../hns/android/java/org/chromium/chrome/browser/ui/messages/infobar/HnsSimpleConfirmInfoBarBuilder.java",
  "../../hns/android/java/org/chromium/chrome/browser/upgrade/HnsPackageReplacedBroadcastReceiver.java",
  "../../hns/android/java/org/chromium/chrome/browser/upgrade/HnsUpgradeJobIntentServiceImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/upgrade/NotificationIntent.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/HnsConstants.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/HnsDbUtil.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/HnsDynamicColors.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/HnsReferrer.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/ConfigurationUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/ImageUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/LiveDataUtil.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/PackageUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/TabUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/util/Triple.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/HnsVpnNativeWorker.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/HnsVpnObserver.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/DisconnectVpnBroadcastReceiver.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/activities/HnsVpnParentActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/activities/HnsVpnPlansActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/activities/HnsVpnProfileActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/activities/HnsVpnSupportActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/adapters/HnsVpnPlanPagerAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/adapters/HnsVpnServerSelectionAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/fragments/HnsVpnAlwaysOnErrorDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/fragments/HnsVpnCalloutDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/fragments/HnsVpnConfirmDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/fragments/LinkVpnSubscriptionDialogFragment.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/models/HnsVpnPrefModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/models/HnsVpnProfileCredentials.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/models/HnsVpnServerRegion.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/models/HnsVpnWireguardProfileCredentials.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/split_tunnel/ApplicationDataModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/split_tunnel/ApplicationListAdapter.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/split_tunnel/ApplicationViewModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/split_tunnel/SplitTunnelActivity.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/utils/HnsVpnApiResponseUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/utils/HnsVpnPrefUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/utils/HnsVpnProfileUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/utils/HnsVpnUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/wireguard/TunnelModel.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/wireguard/WireguardConfigUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/wireguard/WireguardServiceImpl.java",
  "../../hns/android/java/org/chromium/chrome/browser/vpn/wireguard/WireguardUtils.java",
  "../../hns/android/java/org/chromium/chrome/browser/widget/quickactionsearchandbookmark/QuickActionSearchAndBookmarkWidgetProvider.java",
  "../../hns/android/java/org/chromium/chrome/browser/widget/quickactionsearchandbookmark/promo/SearchWidgetPromoPanel.java",
  "../../hns/android/java/org/chromium/chrome/browser/widget/quickactionsearchandbookmark/utils/HnsSearchWidgetUtils.java",
]

hns_java_sources += hns_ads_java_sources
hns_java_sources += hns_components_embedder_support_java_sources
hns_java_sources += hns_rewards_java_sources
hns_java_sources += hns_feed_java_sources
hns_java_sources += hns_public_tab_management_java_sources
hns_java_sources += hns_share_java_sources
hns_java_sources += hns_app_vpn_billing_sources

hns_browser_ui_android_appmenu_internal_sources = [
  "//hns/browser/ui/android/appmenu/internal/java/src/org/chromium/chrome/browser/ui/appmenu/HnsAppMenu.java",
  "//hns/browser/ui/android/default_browser_promo/java/src/org/chromium/chrome/browser/ui/default_browser_promo/HnsDefaultBrowserPromoUtils.java",
]

hns_browser_ui_android_toolbar_sources = [
  "//hns/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/bottom/HnsBottomControlsMediator.java",
  "//hns/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/top/BottomTabSwitcherActionMenuCoordinator.java",
  "//hns/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/top/HnsToolbarLayout.java",
]

hns_java_base_sources = [
  "//hns/android/java/org/chromium/base/HnsCommandLineInitUtil.java",
  "//hns/android/java/org/chromium/base/HnsFeatureList.java",
  "//hns/android/java/org/chromium/base/HnsPreferenceKeys.java",
  "//hns/android/java/org/chromium/base/HnsReflectionUtil.java",
]

hns_java_base_module_sources = [
  "//hns/android/java/org/chromium/chrome/browser/base/SplitCompatJobIntentService.java",
  "//hns/android/java/org/chromium/chrome/browser/upgrade/HnsUpgradeJobIntentService.java",
  "//hns/android/java/org/chromium/chrome/browser/vpn/wireguard/WireguardService.java",
]

hns_java_base_module_deps = [
  "//hns/third_party/android_deps:com_wireguard_android_java",
  "//third_party/androidx:androidx_core_core_java",
  "//third_party/androidx:androidx_lifecycle_lifecycle_viewmodel_java",
]

hns_java_base_module_deps += hns_java_base_module_billing_deps
